<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragmentHome"
        android:icon="@drawable/v_ic_tab_home"
        android:title="@string/home"
        app:tooltipText="@string/home" />
    <item
        android:id="@+id/fragmentDetail"
        android:icon="@drawable/v_ic_tab_category"
        android:title="@string/category"
        app:tooltipText="@string/category" />

    <item
        android:id="@+id/fragmentBag"
        android:icon="@drawable/v_ic_tab_cart"
        android:title="@string/bag"
        app:tooltipText="@string/bag" />

    <item
        android:id="@+id/fragmentProfile"
        android:icon="@drawable/v_ic_tab_profile"
        android:title="@string/profile"
        app:tooltipText="@string/profile" />
</menu>