<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.solulab.example.view.fragments.upload.UploadViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonChoose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/warm_grey"
                android:textColor="@color/black"
                android:text="@string/select" />

            <EditText
                android:id="@+id/etImageNme"
                android:hint="@string/name_for_image"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/upload" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>

</layout>