<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="position"
            type="Integer" />

        <variable
            name="data"
            type="com.solulab.example.view.fragments.expandable.Hero" />

        <variable
            name="holder"
            type="com.solulab.example.view.fragments.expandable.DetailsViewHolder" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/azul_two"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:onClick="@{(view) -> holder.onClicked(view,position)}"
                    android:text="@{data.name}"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large.Inverse" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"

                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:imageUrl="@{data.imageurl}"
                        android:scaleType="fitXY" />

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp">

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/real_name" />

                            <TextView
                                android:id="@+id/textViewRealName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{data.realname}"
                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/team" />

                            <TextView
                                android:id="@+id/textViewTeam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{data.team}"

                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/firstappearance" />

                            <TextView
                                android:id="@+id/textViewFirstAppearance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{data.firstappearance}"

                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/created_by" />

                            <TextView
                                android:id="@+id/textViewCreatedBy"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{data.createdby}"

                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/publisher" />

                            <TextView
                                android:id="@+id/textViewPublisher"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{data.publisher}"

                                android:textStyle="bold" />
                        </TableRow>

                        <TableRow>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bio" />

                            <TextView
                                android:id="@+id/textViewBio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine"
                                android:text="@{data.bio}"
                                android:textStyle="bold" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>


</layout>
